otus-04-kbalakin/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-kbalakin-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-kbalakin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: otus-kbalakin
    spec:
      containers:
        - name: otus-kbalakin
          image: kosbalakin/otus-kbalakin:1.0
          ports:
            - containerPort: 8000
              name: otus-port
